Fixed Status bar on iOS

--- a/investigations/code/Instagram Plugin Code/www/css/style.css
+++ b/investigations/code/Instagram Plugin Code/www/css/style.css
@@ -1,7 +1,7 @@
 /* Empty. Add your own CSS if you like */
-  .home, .bar-stable,.item {
+   .home, .bar-stable,.item {
         background-color: #000 !important;
-    }  
+    }    
 #avi {
     border-radius: 50px;
     margin-bottom: 15px;
@@ -12,7 +12,4 @@
 }
 p {
     color:white;
-}
-hr {
-    background-color: white;
 }
